--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <meta charset="utf-8">
 </head>
 
-<h1>Hi...</h1>
+<h1>The Jake Williams Website</h1>
 <body>
     <p>
-        The start of my website
+        <div>A replacement for my Twitter</div>
+        <q>Too tall to be Kanye</q>
     </p>
 </body>
