--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
+<!DOCTYPE html>
+<html lang="en-US">
+
 <head>
 <meta charset="utf-8">
+<title>The Jake Williams.com</title>
+<meta name="description" content="The personalized blog and website created by and for Jake Williams as a challenge for himself."
 </head>
 
-<h1>The Jake Williams Website</h1>
 <body>
     <p>
-        <div>A replacement for my Twitter</div>
-        <q>Too tall to be Kanye</q>
+        A replacement for my Twitter<br />
+        <blockquote>Too tall to be Kanye</blockquote>
     </p>
 </body>
+
+</html>
