--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 
 <body>
     <p>
-        A replacement for my Twitter<br />
-        <blockquote>Too tall to be Kanye</blockquote>
+        <h1 style="text-align: center;">The Jake Williams.com</h1>
+        <h2>Website goals:</h2>
+        <ol>
+            <li>A place for all my social media links and sites</li>
+            <li>Motivational quotes and Jake-phrases</li>
+            <li>A list of the things I'm thankful for</li>
+        </ol>
+
     </p>
 </body>
 
