--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
             <li>Motivational quotes and Jake-phrases</li>
             <li>A list of the things I'm thankful for</li>
         </ol>
-
     </p>
+
+    <footer>
+        <a href="https://www.instagram.com/jake.s.williams/" target="Instagram" rel="external" type="text/html">
+        </a>
+    </footer>
 </body>
 
 </html>
