--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         </ol>
     </p>
 
+    <a href="footer">Jump to footer</a>
+    <br />
+    <a name="footer"></a>
     <footer>
         <a href="https://www.instagram.com/jake.s.williams/" target="Instagram" rel="external" type="text/html">
         </a>
