--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
             <li>Motivational quotes and Jake-phrases</li>
             <li>A list of the things I'm thankful for</li>
         </ol>
-        <br />
-        <a href="https://www.instagram.com/jake.s.williams/" target="Instagram" rel="external" type="text/html">
-        </a>
+    </p>
+    
+    <h2>Social Media sites</h2>
     <p>
+        <a href= "https://www.instagram.com/jake.s.williams/">
+            Instagram
+        </a>
+    </p>
    
    
     
