--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             Youtube
         </a>
+        <br>
+        <a href="https://vsco.co/jake-s-williams/">
+            VSCO
+        </a>
+        <br>
+        Snapchat username: ninjacreepiamus
     </p>
    
    
