--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <h1 style="text-align: center;">The Jake Williams.com</h1>
         <h2>Website goals:</h2>
         <ol>
+            <li>A bio about myself and a some of the projects I'm working on</li>
             <li>A place for all my social media links and sites</li>
             <li>Motivational quotes and Jake-phrases</li>
-            <li>A list of the things I'm thankful for</li>
+            
         </ol>
     </p>
     
-    <h2>Social Media sites</h2>
+    <h2>Social Media Links</h2>
     <p>
         <a href= "https://www.instagram.com/jake.s.williams/">
             Instagram
@@ -26,6 +27,10 @@
         <br>
         <a href= "https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             Youtube
+        </a>
+        <br>
+        <a href= "https://vsco.co/jake-s-williams/gallery">
+            VSCO
         </a>
         <br>
         Snapchat username: ninjacreepiamus
