--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <br>
         Snapchat username: ninjacreepiamus
     </p>
+
+ <img src="https://imgur.com/omZglFf" alt="Picture of a sexy, well-dressed man in a bathroom mirror">
    
    
     
