--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Snapchat username: ninjacreepiamus
     </p>
 
- <img src="https://imgur.com/omZglFf" alt="Picture of a sexy, well-dressed man in a bathroom mirror">
+ <img src="https://i.imgur.com/omZglFf.jpg" alt="Picture of a sexy, well-dressed man in a bathroom mirror">
    
    
     
