--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <p>
-        <h1 style="text-align: center;">The Jake Williams.com</h1>
+        <h1 style="text-align: center;">The Jake Williams Website &#129429</h1>
         <h2>Website goals:</h2>
         <ol>
             <li>A bio about myself and a some of the projects I'm working on</li>
