--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <p>
         <h1 style="text-align: center;">&#128187 The Jake Williams Website &#129429</h1>
-        <h2 style="text-align: center;">&#x1F37a&#x1F1EEa Happy Saint Patrick's Day! &#x1F340a&#x1F3A9a</h2>
+        <h2 style="text-align: center;">&#x1F37a Happy Saint Patrick's Day! &#127808 </h2>
         <h2>Website goals:</h2>
         <ol>
             <li>A bio about myself and a some of the projects I'm working on</li>
