--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <p>
         <h1 style="text-align: center;">&#128187 The Jake Williams Website &#129429</h1>
-        <h2 style="text-align: center;">March Madness is ON!</h2>
+        <h2 style="text-align: center;">He is Risen</h2>
         <h2>Website goals:</h2>
         <ol>
             <li>A bio about myself and a some of the projects I'm working on</li>
