--- a/index.html
+++ b/index.html
@@ -28,21 +28,12 @@
     </div>
 
     <h2>Social Media Links</h2>
-    <p>
-        <a href="https://www.instagram.com/jake.s.williams/">
-            Instagram
-        </a>
-        <br>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            Youtube
-        </a>
-        <br>
-        <a href="https://vsco.co/jake-s-williams/gallery">
-            VSCO
-        </a>
-        <br>
-        Snapchat username: ninjacreepiamus
-    </p>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.iconfinder.com%2Ficons%2F5296765%2Fcamera_instagram_instagram_logo_icon&psig=AOvVaw3IFHn0qRHo9jHfe0oBIqoH&ust=1629236424105000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNDz-eTAtvICFQAAAAAdAAAAABAD"
+        alt="Instagram logo" height="50" width="50">
+    <a href="https://www.instagram.com/jake.s.williams/"> Instagram </a> <br>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Youtube </a> <br>
+    <a href="https://vsco.co/jake-s-williams/gallery"> VSCO </a> <br>
+    Snapchat username: ninjacreepiamus
 
     <img src="https://i.imgur.com/omZglFf.jpg" alt="Picture of a sexy, well-dressed man in a bathroom mirror"
         style="width:500px;height:500px;">
