--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
     </div>
 
     <h2>Social Media Links</h2>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.iconfinder.com%2Ficons%2F5296765%2Fcamera_instagram_instagram_logo_icon&psig=AOvVaw3IFHn0qRHo9jHfe0oBIqoH&ust=1629236424105000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNDz-eTAtvICFQAAAAAdAAAAABAD"
+    <img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Instagram_colored_svg_1-1024.png"
         alt="Instagram logo" height="50" width="50">
     <a href="https://www.instagram.com/jake.s.williams/"> Instagram </a> <br>
+    <img src="https://i.pinimg.com/originals/19/7b/36/197b365922d1ea3aa1a932ff9bbda4a6.png"
+    alt="Youtube logo" height="50" width="50">
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Youtube </a> <br>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.iconpacks.net%2Ffree-icon%2Fyoutube-logo-2431.html&psig=AOvVaw2ynF09w4JwT-lhB0H-mX7v&ust=1629236589205000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCLinorTBtvICFQAAAAAdAAAAABAD"
+        alt="Youtube logo" height="50" width="50">
     <a href="https://vsco.co/jake-s-williams/gallery"> VSCO </a> <br>
     Snapchat username: ninjacreepiamus
 
