--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
     <img src="https://mpng.subpng.com/20180803/loa/kisspng-snapchat-portable-network-graphics-clip-art-snap-i-snapchat-fire-clipart-5b648099bea269.6396036015333131777809.jpg"
         alt = "Snapchat logo" height="25" width="25">
     Snapchat username: ninjacreepiamus
-    
+    </div>
+
+    <div>
+    <br>
     <img src="https://i.imgur.com/omZglFf.jpg" alt="Picture of a sexy, well-dressed man in a bathroom mirror"
         style="width:500px;height:500px;">
-
     </div>
 
 </body>
