--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 style="text-align: center;">&#128187 The Jake Williams Website &#129429</h1>
-    <h2>Website goals:</h2>
+    <h2>Website goals</h2>
     <ol>
         <li>A bio about myself and a some of the projects I'm working on</li>
         <li>A place for all my social media links and sites</li>
@@ -19,7 +19,7 @@
     </ol>
 
     <div>
-        <h2>About me:</h2>
+        <h2>About me</h2>
         <p>I am a sophomore college student from Southern Indiana attending Purdue University. In the process of a <br>
             computer engineering degree, I plan to focus on software development as a possible career path. <br><br>
 
@@ -52,6 +52,12 @@
     <br>
     <img src="https://i.imgur.com/omZglFf.jpg" alt="Picture of a sexy, well-dressed man in a bathroom mirror"
         style="width:500px;height:500px;">
+    </div>
+
+    <div>
+        <video src = "https://www.youtube.com/watch?v=o3hDl3v-LQA" controls>
+            Video not available
+        </video>
     </div>
 
 </body>
