--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <div>
-        <video src = "https://www.youtube.com/watch?v=o3hDl3v-LQA" controls>
+        <video src = "https://vimeo.com/375468729" controls>
             Video not available
         </video>
     </div>
