--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     </div>
 
     <div>
-        <video src = "https://vimeo.com/375468729" controls>
-            Video not available
-        </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kBQXVjwnVC8"
+         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+         allowfullscreen></iframe>>
     </div>
 
 </body>
