--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>The Jake Williams Website</title>
-    <meta name="description"
-        content="The personalized blog and website created by and for Jake Williams as a challenge for himself.">
-    <link rel="icon" href="">
+    <meta name="description" content="The personalized blog and website created by and for Jake Williams as a challenge for himself.">
 </head>
 
 <body>
