--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
         </p>
     </div>
 
+    <div>
+        <h2>My favorite rappers</h2>
+        <ol>
+            <li>Logic</li>
+            <li>Eminem</li>
+            <li>J Cole</li>
+            <li>MF DOOM</li>
+            <li>21 Savage</li>
+        </ol>
+    </div>
+
     <h2>Social Media Links</h2>
 
     <div>
