--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
 <body>
     <h1 style="text-align: center;">&#128187 The Jake Williams Website &#129429</h1>
-    <h2>Website goals</h2>
-    <ol>
-        <li>A bio about myself and a some of the projects I'm working on</li>
-        <li>A place for all my social media links and sites</li>
-        <li>Motivational quotes and Jake-phrases</li>
-
-    </ol>
+    <div>
+        <h2>Mixtape in the works</h2>
+        <p>I am currently working on a rap project, my first official album which should be <br>
+        released sometime in the spring or the summer. It will be available on Spotify, Apple Music, <br>
+        Amazon Music (ew), Youtube, and more. Stay tuned for updates!</p>
+    </div>
 
     <div>
         <h2>About me</h2>
