--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
     <div>
         <h2>About me</h2>
         <p>I am a sophomore college student from Southern Indiana attending Purdue University. In the process of a <br>
-            computer engineering degree, I plan to focus on software development as a possible career path. <br><br>
+            computer engineering degree, I plan to focus on firmware/hardware development as a possible career path. <br>
+            I am heavily interested in CPU development.<br><br>
 
-            In my free time, I play the piano, produce hip/hop music, and longboard around Purdue's campus.
+            In my free time, I play the piano, produce hip/hop music, and play basketball.
         </p>
     </div>
 
     <div>
         <h2>My favorite rappers</h2>
         <ol>
-            <li>Logic</li>
+            <a href="https://en.wikipedia.org/wiki/Logic_(rapper)" target="_blank"><li>Logic</li></a>
             <li>Eminem</li>
             <li>J Cole</li>
             <li>MF DOOM</li>
