--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <h2>My favorite rappers</h2>
         <ol>
             <a href="https://en.wikipedia.org/wiki/Logic_(rapper)" target="_blank"><li>Logic</li></a>
-            <li>Eminem</li>
-            <li>J Cole</li>
-            <li>MF DOOM</li>
-            <li>21 Savage</li>
+            <a href="https://en.wikipedia.org/wiki/Eminem" target="_blank"><li>Eminem</li></a>
+            <a href="https://en.wikipedia.org/wiki/J._Cole" target="_blank"><li>J. Cole</li></a>
+            <a href="https://en.wikipedia.org/wiki/MF_Doom" target="_blank"><li>MF DOOM</li></a>
+            <a href="https://en.wikipedia.org/wiki/21_Savage" target="_blank"><li>21 Savage</li></a>
         </ol>
     </div>
 
