--- a/music.html
+++ b/music.html
@@ -7,3 +7,9 @@
     <meta name="description"
         content="The personalized blog and website created by and for Jake Williams as a challenge for himself.">
 </head>
+
+<body>
+    <p>
+        Hello, Music!
+    </p>
+</body>
