--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 style="text-align: center;">&#128187 The Jake Williams Website &#129429</h1>
+    <h1 style="text-align: center;" id="top">&#128187 The Jake Williams Website &#129429</h1>
     <div>
         <h2>Mixtape in the works</h2>
         <p>I am currently working on a rap project, my first official album which should be <br>
