--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div>
         <h2>About me</h2>
         <p>I am a sophomore college student from Southern Indiana attending Purdue University. In the process of a <br>
-            computer engineering degree, I plan to focus on firmware/hardware development as a possible career path. <br>
-            I am heavily interested in CPU development.<br><br>
+            computer engineering degree, I plan to focus on firmware development as a possible career path. <br>
+            I am interested in CPU design and architecture and embedded software design.<br><br>
 
-            In my free time, I play the piano, produce hip/hop music, and play basketball.
+            In my free time, I play the piano, make hip-hop music, and play basketball.
         </p>
     </div>
 
@@ -31,8 +31,8 @@
         <ol>
             <a href="https://en.wikipedia.org/wiki/Logic_(rapper)" target="_blank"><li>Logic</li></a>
             <a href="https://en.wikipedia.org/wiki/Eminem" target="_blank"><li>Eminem</li></a>
-            <a href="https://en.wikipedia.org/wiki/J._Cole" target="_blank"><li>J. Cole</li></a>
             <a href="https://en.wikipedia.org/wiki/MF_Doom" target="_blank"><li>MF DOOM</li></a>
+            <a href="https://en.wikipedia.org/wiki/J._Cole" target="_blank"><li>J. Cole</li></a>
             <a href="https://en.wikipedia.org/wiki/21_Savage" target="_blank"><li>21 Savage</li></a>
         </ol>
     </div>
